Fix mathjax overlapping ToC.

--- a/www/style-ultramodern.css
+++ b/www/style-ultramodern.css
@@ -88,6 +88,10 @@ input {
 	top: 1px;
 }
 
+.mjx-chtml {
+	clear: both;
+}
+
 /***********/
 /* NAV BAR */
 /***********/
